# NIST-BRIO

./: CHANGELOG  CONTENT  CONTRIBUTING.md  LICENSE  QUICK_INSTALL.md  README.brio_rc.md  README.brio_tg.md  README.md  VERSION  build-router-config.sh  buildBRIO.sh  generate-router-config.sh  install_dependencies.sh
bgprpki-io/: ASList.c  ChangeLog  Makefile.am  Makefile.am-new  Makefile.in  README.md  bgpsecio.c  brio.spec.in  configure  configure.ac
bgprpki-io/bgp/: BGPFinalStateMachine.c  BGPHeader.c  BGPHeader.h  BGPSession.c  BGPSession.h
bgprpki-io/bgp/printer/: BGPOpenPrinter.c
bgprpki-io/cfg/: bgpsecio.cfg.sample  cfgFile.c  configuration.c  configuration.h
bgprpki-io/rpki-rtr-protocol/: rpki_router.h  rpkirtr_svr.c  rpkirtr_svr.h
bgprpki-io/srx-common/: debug.c  mutex.c  rwlock.c  server_socket.c  server_socket.h  slist.c  socket.c  socket.h  str.c  timer.c
bgprpki-io/tools/: brio-traffic.sh  nccoe-test.sh
brio-examples/: AUTHORS  ChangeLog  IP-Address.cfg  README.md  VERSION  configure.sh  install.sh  prepare.sh  uninstall.sh
brio-examples/_git/: FETCH_HEAD  HEAD  config  index  packed-refs
brio-examples/_git/logs/refs/heads/: brio
brio-examples/_git/logs/refs/remotes/origin/: HEAD
brio-examples/_git/objects/pack/: pack-9c6845f09e23cffda870dd31569b9895008f98e9.idx  pack-9c6845f09e23cffda870dd31569b9895008f98e9.pack
brio-examples/_git/refs/heads/: brio
brio-examples/config-rpki/: README.md  brio_tc.script
brio-examples/demo-aspa-downstream/: README.tpl.md  buildExp.sh  exp1.README.tpl.md  exp1.brio_rc.script  exp1.brio_tg.as65040.tpl  exp1.router.tpl.md  exp14.README.tpl.md  exp14.brio_rc.script  exp14.brio_tg.as65040.tpl  exp14.router.tpl.md  exp57.README.tpl.md  exp57.brio_rc.script  exp57.brio_tg.as65020.tpl  exp57.brio_tg.as65030.tpl  exp57.router.tpl.md  exp7.README.tpl.md  exp7.brio_rc.script  exp7.brio_tg.as65020.tpl  exp7.router.tpl.md  exp8.README.tpl.md  exp8.brio_rc.script  exp8.brio_tg.as65050.tpl  exp8.router.tpl.md  exp910.README.tpl.md  exp910.brio_rc.script  exp910.brio_tg.as65040.tpl  exp910.router.tpl.md  start_exp1.sh  start_exp14.sh  start_exp57.sh  start_exp7.sh  start_exp8.sh  start_exp910.sh
brio-examples/demo-aspa-upstream/: README.tpl.md  exp13.README.tpl.md  exp13.brio_rc.script  exp13.brio_tg.as65030.tpl  exp13.brio_tg.as65050.tpl  exp13.router.tpl.md  exp2.README.tpl.md  exp2.brio_rc.script  exp2.brio_tg.as65030.tpl  exp2.router.tpl.md  exp4.README.tpl.md  exp4.brio_rc.script  exp4.brio_tg.as65030.tpl  exp4.router.tpl.md  exp46.README.tpl.md  exp46.brio_rc.script  exp46.brio_tg.as65000.tpl  exp46.brio_tg.as65030.tpl  exp46.router.tpl.md  exp79.README.tpl.md  exp79.brio_rc.script  exp79.brio_tg.as65000.tpl  exp79.brio_tg.as65040.tpl  exp79.router.tpl.md  start_exp13.sh  start_exp2.sh  start_exp4.sh  start_exp46.sh  start_exp79.sh
brio-examples/etc/: rtr-wrapper.cfg.sample
brio-examples/lib/: functions.sh  ip_tools.sh
brio-examples/store/config-quaggasrx/: bgpd.rfc8097-peer.conf  bgpd.rfc8097.conf
brio-examples/test-brio_tg-sca/: brio_tg-sca-gen.conf  brio_tg-sca-replay.conf  run.sh
brio-examples/test-sca/: run.sh  srxcryptoapi-sca-1.conf  srxcryptoapi-sca-2-3.conf
brio-examples/tfg-aspa/: README.md
dependencies/: rocky.req  ubuntu-22.req  ubuntu.req
srx-crypto-api/: ChangeLog  configure  configure.ac
srx-crypto-api/m4/: srx_m4_check_libconfig.m4
tools/: generate-router-config.sh
